# distiller

./: .gitignore  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.tmp  LICENSE  PROGRESS.md  README.md  REFACTORING_PLAN.md  SPEC.md  config.toml
.github/workflows/: ci.yml
.kilocode/: mcp.json
datasets/default/: samples.jsonl
datasets/demo/: samples.jsonl
datasets/job-default-1768582968/: job-default-1768582968.events.jsonl
datasets/test_sqlite/: samples.jsonl
destilation-cli/: Cargo.toml
destilation-cli/src/: main.rs  tui.rs
destilation-core/: Cargo.toml
destilation-core/datasets/test_metrics/: samples.jsonl
destilation-core/datasets/test_metrics/job-metrics-001/: samples.jsonl
destilation-core/datasets/test_processor/test-job-1/: samples.jsonl
destilation-core/datasets/test_processor_2/test-job-2/: samples.jsonl
destilation-core/src/: domain.rs  lib.rs  logging.rs  metrics.rs  orchestrator.rs  processor.rs  provider.rs  providers.rs  queue.rs  shared.rs  storage.rs  validation.rs  validators.rs
destilation-core/src/providers/: mock.rs  mod.rs  ollama.rs  openrouter.rs  script.rs  tests.rs
destilation-core/tests/: metrics.rs  orchestrator.rs  processor.rs  providers.rs  routing.rs  storage_sqlite.rs  validators.rs
docs/: PROJECT_STATUS_REPORT_2026_01_16.md  PROJECT_STATUS_REPORT_v1_FINAL.md
