[package]
name = "destilation-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "destiler"
path = "src/main.rs"

[dependencies]
destilation-core = { path = "../destilation-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
