[package]
name = "destilation-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
jsonschema = "0.38.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
